Se modifico llamado de funcion a traves de boton y se borraron funciones en etiqueta script

--- a/paginas/resultado.html
+++ b/paginas/resultado.html
@@ -12,14 +12,10 @@
     </div>
 
     <div>
-        <button onclick="resultadoTriaje()">Evaluar</button>
+        <button onclick="arrayEquals()">Evaluar</button>
     </div>
 
 
-    <script src="../codigo/script.js">
-    valorTriangulo()
-    valorTrianguloPEDCTAS()
-    valorAlertaPEDCTAS()
-    valorChildPEDCTAS()</script>
+    <script src="../codigo/script.js"></script>
 </body>
 </html>
