Se modifico etiqueta script para eliminar codigo para cambiar de hojka html

--- a/paginas/actividad.html
+++ b/paginas/actividad.html
@@ -20,13 +20,9 @@
 
     <br>
     <div>
-        <button onclick="cambiarPagina()">CONTINUAR</button>
+        <button><a href=""></a></button>
     </div>
 
-    <script src="../codigo/script.js">
-        function cambiarPagina(){
-            history.pushState(null, "", "../paginas/tono.html");
-        }
-    </script>
+    <script src="../codigo/script.js"></script>
 </body>
 </html>
