--- a/paginas/antecedentes.html
+++ b/paginas/antecedentes.html
@@ -26,14 +26,10 @@
 
     <br>
     <div>
-        <button onclick="cambiarPagina()">CONTINUAR</button>
+        <button>CONTINUAR</button>
     </div>
 
-    <script src="../codigo/script.js">
-        function cambiarPagina(){
-            history.pushState(null, "", "../paginas/resultado.html");
-        }
-    </script>
+    <script src="../codigo/script.js"></script>
 </body>
 </html>
 
