--- a/paginas/tono.html
+++ b/paginas/tono.html
@@ -19,13 +19,9 @@
 
     <br>
     <div>
-        <button onclick="cambiarPagina()">CONTINUAR</button>
+        <button>CONTINUAR</button>
     </div>
 
-    <script src="../codigo/script.js">
-        function cambiarPagina(){
-            history.pushState(null, "", "../paginas/contactoVisual.html");
-        }
-    </script>
+    <script src="../codigo/script.js"></script>
 </body>
 </html>
