--- a/paginas/hidratacion.html
+++ b/paginas/hidratacion.html
@@ -61,14 +61,10 @@
 
     <br>
     <div>
-        <button onclick="cambiarPagina()">CONTINUAR</button>
+        <button>CONTINUAR</button>
     </div>
 
-    <script src="../codigo/script.js">
-        function cambiarPagina(){
-            history.pushState(null, "", "../paginas/actividad.html");
-        }
-    </script>
+    <script src="../codigo/script.js"></script>
 </body>
 </html>
 
