--- a/paginas/llanto.html
+++ b/paginas/llanto.html
@@ -25,13 +25,9 @@
 
     <br>
     <div>
-        <button onclick="cambiarPagina()">CONTINUAR</button>
+        <button>CONTINUAR</button>
     </div>
 
-    <script src="../codigo/script.js">
-        function cambiarPagina(){
-            history.pushState(null, "", "../paginas/respiratorio.html");
-        }
-    </script>
+    <script src="../codigo/script.js"></script>
 </body>
 </html>
