--- a/paginas/nivelConciencia.html
+++ b/paginas/nivelConciencia.html
@@ -19,14 +19,10 @@
 
     <br>
     <div>
-        <button onclick="cambiarPagina()">CONTINUAR</button>
+        <button>CONTINUAR</button>
     </div>
 
-    <script src="../codigo/script.js">
-        function cambiarPagina(){
-            history.pushState(null, "", "../paginas/coloracionPiel.html");
-        }
-    </script>
+    <script src="../codigo/script.js"></script>
 </body>
 </html>
 
