Se cambio class por id en etiquetas button

--- a/paginas/actividad.html
+++ b/paginas/actividad.html
@@ -11,10 +11,10 @@
     </div>
     
     <div>
-        <button class="activJuega" onclick="valorBoton('actividadJuega')">Juega</button>
-        <button class="activConfundido" onclick="valorBoton('actividadConfundido')">Confundido</button>
-        <button class="activLetargico" onclick="valorBoton('actividadLetargico')">Letargico</button>
-        <button class="activInconsciente" onclick="valorBoton('actividadInconsciente')">Inconsciente</button>
+        <button id="activJuega" onclick="valorBoton('actividadJuega')">Juega</button>
+        <button id="activConfundido" onclick="valorBoton('actividadConfundido')">Confundido</button>
+        <button id="activLetargico" onclick="valorBoton('actividadLetargico')">Letargico</button>
+        <button id="activInconsciente" onclick="valorBoton('actividadInconsciente')">Inconsciente</button>
     </div>
 
 
