--- a/paginas/antecedentes.html
+++ b/paginas/antecedentes.html
@@ -13,15 +13,15 @@
         <h2>Presenta alguna de las siguientes condiciones</h2>
         <p>Enfermedades Cronico Degenerativas</p>
         <p>Uso de esteroides u depresores del sistema inmune</p>
-        <button class="antecedentesPresentes" onclick="valorBoton('antecedentesPresentes')">Si </button>
-        <button class="antecedentesAusentes" onclick="valorBoton('antecedentresAusentes')">No</button>
+        <button id="antecedentesPresentes" onclick="valorBoton('antecedentesPresentes')">Si </button>
+        <button id="antecedentesAusentes" onclick="valorBoton('antecedentresAusentes')">No</button>
     </div>
 
     <div>
         <h2>Datos de Abuso</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo quasi corrupti soluta rem fugit, perspiciatis quod atque repellat maiores suscipit laboriosam dolor obcaecati autem minima mollitia id numquam aut! Quas.</p>
-        <button class="abusoPresente" onclick="valorBoton('abusoPresente')">Si</button>
-        <button class="abusoAusente" onclick="valorBoton('abusoAusente')">No</button>
+        <button id="abusoPresente" onclick="valorBoton('abusoPresente')">Si</button>
+        <button id="abusoAusente" onclick="valorBoton('abusoAusente')">No</button>
     </div>
 
     <br>
