--- a/paginas/coloracionPiel.html
+++ b/paginas/coloracionPiel.html
@@ -11,12 +11,12 @@
     </div>
     
     <div>
-        <button class="colorPielRosa" onclick="valorBoton('rosada')">Rosada</button>
-        <button class="colorPielPalida" onclick="valorBoton('palida')">Palida</button>
-        <button class="colorPielCianotica" onclick="valorBoton('cianotica')">Cianotica</button>
-        <button class="colorPielRubicunda" onclick="valorBoton('rubicunda')">Rubicunda</button>
-        <button class="colorPielMarmorea" onclick="valorBoton('marmorea')">Marmorea</button>
-        <button class="colorPielPurpura" onclick="valorBoton('purpurica')">Purpurica</button>
+        <button id="colorPielRosa" onclick="valorBoton('rosada')">Rosada</button>
+        <button id="colorPielPalida" onclick="valorBoton('palida')">Palida</button>
+        <button id="colorPielCianotica" onclick="valorBoton('cianotica')">Cianotica</button>
+        <button id="colorPielRubicunda" onclick="valorBoton('rubicunda')">Rubicunda</button>
+        <button id="colorPielMarmorea" onclick="valorBoton('marmorea')">Marmorea</button>
+        <button id="colorPielPurpura" onclick="valorBoton('purpurica')">Purpurica</button>
 
     </div>
 
