--- a/paginas/contactoVisual.html
+++ b/paginas/contactoVisual.html
@@ -11,9 +11,9 @@
     </div>
     
     <div>
-        <button class="mantieneMirada" onclick="valorBoton('mantieneMirada')">Mantiene la mirada</button>
-        <button class="noMantieneMirada" onclick="valorBoton('noMantieneMirada')">No mantiene la mirada</button>
-        <button class="noDirigeMirada" onclick="valorBoton('noDirigeMirada')">No dirige la mirada</button>
+        <button id="mantieneMirada" onclick="valorBoton('mantieneMirada')">Mantiene la mirada</button>
+        <button id="noMantieneMirada" onclick="valorBoton('noMantieneMirada')">No mantiene la mirada</button>
+        <button id="noDirigeMirada" onclick="valorBoton('noDirigeMirada')">No dirige la mirada</button>
     </div>
 
 
