--- a/paginas/hidratacion.html
+++ b/paginas/hidratacion.html
@@ -13,24 +13,24 @@
     <div>
         <h3>Consistencia de la Piel</h3>
         <div>
-            <button class="estadoHidratacionPielNormal" onclick="valorBoton('pielNormal')">Piel Normal</button>
-            <button class="estadoHidratacionPielPastosa" onclick="valorBoton('pielPastosa')">Piel Pastosa</button>
+            <button id="estadoHidratacionPielNormal" onclick="valorBoton('pielNormal')">Piel Normal</button>
+            <button id="estadoHidratacionPielPastosa" onclick="valorBoton('pielPastosa')">Piel Pastosa</button>
         </div>
     </div>
 
     <div>
         <h3>Estado de las Mucosas</h3>
         <div>
-            <button class="estadoHidratacionMucosaNormal" onclick="valorBoton('mucosaNormal')">Mucosas Hidratadas</button>
-            <button class="estadoHidratacionMucosaSeca" onclick="valorBoton('mucosaSeca')">Mucosas Secas</button>
+            <button id="estadoHidratacionMucosaNormal" onclick="valorBoton('mucosaNormal')">Mucosas Hidratadas</button>
+            <button id="estadoHidratacionMucosaSeca" onclick="valorBoton('mucosaSeca')">Mucosas Secas</button>
         </div>
     </div>
     
     <div>
         <h3>Condicion de los Ojos</h3>
         <div>
-            <button class="estadoHidratacionOjoNormal" onclick="valorBoton('ojoNormal')">Ojos Normales</button>
-            <button class="estadoHidratacionOjoHundido" onclick="valorBoton('ojoHundido')">Ojos Hundidos</button>
+            <button id="estadoHidratacionOjoNormal" onclick="valorBoton('ojoNormal')">Ojos Normales</button>
+            <button id="estadoHidratacionOjoHundido" onclick="valorBoton('ojoHundido')">Ojos Hundidos</button>
         </div>
     </div>
 
@@ -38,24 +38,24 @@
     <div>
         <h3>Presencia de Vomito</h3>
         <div>
-            <button class="estadoHidratacionVomitoPresente" onclick="valorBoton('vomitoPresente')">Vomito Presente</button>
-            <button class="estadoHidratacionVomitoAusente" onclick="valorBoton('vomitoAusente')">Vomito Ausente</button>
+            <button id="estadoHidratacionVomitoPresente" onclick="valorBoton('vomitoPresente')">Vomito Presente</button>
+            <button id="estadoHidratacionVomitoAusente" onclick="valorBoton('vomitoAusente')">Vomito Ausente</button>
         </div>
     </div>
 
     <div>
         <h3>Tolerancia a la Via Oral</h3>
         <div>
-            <button class="estadoHidratacionTolera" onclick="valorBoton('toleraVO')">Tolera</button>
-            <button class="estadoHidratacionNoTolera" onclick="valorBoton('noToleraVO')">No Tolera</button>
+            <button id="estadoHidratacionTolera" onclick="valorBoton('toleraVO')">Tolera</button>
+            <button id="estadoHidratacionNoTolera" onclick="valorBoton('noToleraVO')">No Tolera</button>
         </div>
     </div>
 
     <div>
         <h3>Turgencia de la Piel (Signo del Pliegue)</h3>
         <div>
-            <button class="estadoHidratacionPlieguePositivo" onclick="valorBoton('plieguePositivo')">Positivo</button>
-            <button class="estadoHidratacionPliegueNegativo" onclick="valorBoton('pliegueNegativo')">Negativo</button>
+            <button id="estadoHidratacionPlieguePositivo" onclick="valorBoton('plieguePositivo')">Positivo</button>
+            <button id="estadoHidratacionPliegueNegativo" onclick="valorBoton('pliegueNegativo')">Negativo</button>
         </div>
     </div>
 
