--- a/paginas/llanto.html
+++ b/paginas/llanto.html
@@ -12,14 +12,14 @@
     
     <div>
         <h3>Intensidad del Llanto</h3>
-        <button class="llantoFuerte" onclick="valorBoton('llantoFuerte')">Fuerte</button>
-        <button class="llantoDebil" onclick="valorBoton('llantoDebil')">Debil</button>
+        <button id="llantoFuerte" onclick="valorBoton('llantoFuerte')">Fuerte</button>
+        <button id="llantoDebil" onclick="valorBoton('llantoDebil')">Debil</button>
     </div>
 
     <div>
         <h3>Consolabilidad</h3>
-        <button class="llantoConsolable" onclick="valorBoton('llantoConsolable')">Consolable</button>
-        <button class="llantoInconsolable" onclick="valorBoton('llantoInconsolable')">Inconsolable</button>
+        <button id="llantoConsolable" onclick="valorBoton('llantoConsolable')">Consolable</button>
+        <button id="llantoInconsolable" onclick="valorBoton('llantoInconsolable')">Inconsolable</button>
     </div>
 
 
