--- a/paginas/nivelConciencia.html
+++ b/paginas/nivelConciencia.html
@@ -11,10 +11,10 @@
     </div>
     
     <div>
-        <button class="concienciaDespierto" onclick="valorBoton('despierto')">Consciente | Despierto </button>
-        <button class="concienciaDormido" onclick="valorBoton('dormido')">Dormido | Despierta Rapido</button>
-        <button class="concienciaIrritable" onclick="valorBoton('irritable')"> Consciencia Alterada | Irritable | Despierta Lento</button>
-        <button class="concienciaConvulsiones" onclick="valorBoton('convulsiones')">No despierta | No duerme | Convulsiones</button>
+        <button id="concienciaDespierto" onclick="valorBoton('despierto')">Consciente | Despierto </button>
+        <button id="concienciaDormido" onclick="valorBoton('dormido')">Dormido | Despierta Rapido</button>
+        <button id="concienciaIrritable" onclick="valorBoton('irritable')"> Consciencia Alterada | Irritable | Despierta Lento</button>
+        <button id="concienciaConvulsiones" onclick="valorBoton('convulsiones')">No despierta | No duerme | Convulsiones</button>
     </div>
 
     <br>
