--- a/paginas/respiratorio.html
+++ b/paginas/respiratorio.html
@@ -13,8 +13,8 @@
         <h3>Ruidos Respiratorios Patologicos</h3>
         <h4>¿Hay presencia de ruidos patologicos?</h4>
         <div id="ruido-respiratorio">
-            <button class="ruidosPatologicosPresentes" onclick="crearBoton('ruidoPresente')">Si</button>
-            <button class="ruidosPatologicosAusentes" onclick="valorBoton('ruidoAusente')">No</button>
+            <button id="ruidosPatologicosPresentes" onclick="crearBoton('ruidoPresente')">Si</button>
+            <button id="ruidosPatologicosAusentes" onclick="valorBoton('ruidoAusente')">No</button>
         </div>
     </div>
 
@@ -22,8 +22,8 @@
         <h3>Datos de Dificultad Respiratoria</h3>
         <h4>¿Hay presencia de datos de dificultad respiratoria?</h4>
         <div id="dificultad-respiratorio">
-            <button class="dificultadRespiratoriaPresente" onclick="crearBoton('dificultadPresente')">Si</button>
-            <button class="dificultadRespiratoriaAusente" onclick="valorBoton('dificultadAusente')">No</button>
+            <button id="dificultadRespiratoriaPresente" onclick="crearBoton('dificultadPresente')">Si</button>
+            <button id="dificultadRespiratoriaAusente" onclick="valorBoton('dificultadAusente')">No</button>
         </div>
     </div>
 
@@ -31,8 +31,8 @@
         <h3>Posicion Patologica</h3>
         <h4>¿Se encuentra en posicion respiratoria patologica?</h4>
         <div id="posicion-respiratorio">
-            <button class="posicionRespiratoriaPresente" onclick="crearBoton('posicionPresente')">Si</button>
-            <button class="posicionRespiratoriaAusente" onclick="valorBoton('posicionAusente')">No</button>
+            <button id="posicionRespiratoriaPresente" onclick="crearBoton('posicionPresente')">Si</button>
+            <button id="posicionRespiratoriaAusente" onclick="valorBoton('posicionAusente')">No</button>
         </div>
     </div>
 
