--- a/paginas/tono.html
+++ b/paginas/tono.html
@@ -11,9 +11,9 @@
     </div>
     
     <div>
-        <button class="tonoEuto" onclick="valorBoton('eutonico')">Eutonico</button>
-        <button class="tonoHipo" onclick="valorBoton('hipotonico')">Hipotonico</button>
-        <button class="tonoHiper" onclick="valorBoton('hipertonico')">Hipertonico</button>
+        <button id="tonoEuto" onclick="valorBoton('eutonico')">Eutonico</button>
+        <button id="tonoHipo" onclick="valorBoton('hipotonico')">Hipotonico</button>
+        <button id="tonoHiper" onclick="valorBoton('hipertonico')">Hipertonico</button>
     </div>
 
 
