Se modifico etiqueta button

--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 
     <br>
     <div>
-        <button onclick="cambiarPagina()">INICIAR</button>
+        <a href="./paginas/nivelConciencia.html">
+            <button>INICAR</button>
+        </a>
     </div>
     
-    <script>
-        function cambiarPagina(){
-            history.pushState(null, "", "../paginas/nivelConciencia.html");
-        }
-    </script>
 </body>
 </html>
