--- a/paginas/antecedentes.html
+++ b/paginas/antecedentes.html
@@ -26,7 +26,9 @@
 
     <br>
     <div>
-        <button>CONTINUAR</button>
+        <a href="../paginas/resultado.html">
+            <button>INICAR</button>
+        </a>
     </div>
 
     <script src="../codigo/script.js"></script>
