--- a/paginas/coloracionPiel.html
+++ b/paginas/coloracionPiel.html
@@ -23,7 +23,9 @@
 
     <br>
     <div>
-        <button>CONTINUAR</button>
+        <a href="../paginas/hidratacion.html">
+            <button>INICAR</button>
+        </a>
     </div>
 
     <script src="../codigo/script.js"></script>
