--- a/paginas/actividad.html
+++ b/paginas/actividad.html
@@ -20,7 +20,9 @@
 
     <br>
     <div>
-        <button><a href=""></a></button>
+        <a href="../paginas/tono.html">
+            <button>INICAR</button>
+        </a>
     </div>
 
     <script src="../codigo/script.js"></script>
