--- a/paginas/hidratacion.html
+++ b/paginas/hidratacion.html
@@ -61,7 +61,9 @@
 
     <br>
     <div>
-        <button>CONTINUAR</button>
+        <a href="../paginas/actividad.html">
+            <button>INICAR</button>
+        </a>
     </div>
 
     <script src="../codigo/script.js"></script>
