--- a/paginas/llanto.html
+++ b/paginas/llanto.html
@@ -25,7 +25,9 @@
 
     <br>
     <div>
-        <button>CONTINUAR</button>
+        <a href="../paginas/respiratorio.html">
+            <button>INICAR</button>
+        </a>
     </div>
 
     <script src="../codigo/script.js"></script>
