--- a/paginas/nivelConciencia.html
+++ b/paginas/nivelConciencia.html
@@ -19,7 +19,9 @@
 
     <br>
     <div>
-        <button>CONTINUAR</button>
+        <a href="../paginas/coloracionPiel.html">
+            <button>INICAR</button>
+        </a>
     </div>
 
     <script src="../codigo/script.js"></script>
