--- a/paginas/respiratorio.html
+++ b/paginas/respiratorio.html
@@ -39,7 +39,9 @@
 
     <br>
     <div>
-        <button>CONTINUAR</button>
+        <a href="../paginas/antecedentes.html">
+            <button>INICAR</button>
+        </a>
     </div>
 
     <script src="../codigo/script.js"></script>
